import&export dll stuff

--- a/StarStudio/StarStudio.vcxproj.filters
+++ b/StarStudio/StarStudio.vcxproj.filters
@@ -15,12 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Test.h">
+    <ClInclude Include="src\StarStudio\Core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\StarStudio\Application.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\StarStudio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Test.cpp">
+    <ClCompile Include="src\StarStudio\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
