--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "StarStudio/vendor/spdlog"]
 	path = StarStudio/vendor/spdlog
 	url = https://github.com/gabime/spdlog/
+[submodule "StarStudio/vendor/GLFW"]
+	path = StarStudio/vendor/GLFW
+	url = https://github.com/TheCherno/glfw/
