--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "StarStudio/vendor/GLFW"]
 	path = StarStudio/vendor/GLFW
 	url = https://github.com/TheCherno/glfw/
+[submodule "StarStudio/vendor/imgui"]
+	path = StarStudio/vendor/imgui
+	url = https://github.com/TheCherno/imgui
