--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "StarStudio/vendor/imgui"]
 	path = StarStudio/vendor/imgui
 	url = https://github.com/Kartikkain/imgui/
+[submodule "StarStudio/vendor/glm"]
+	path = StarStudio/vendor/glm
+	url = https://github.com/g-truc/glm
