--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Premake
+      - name: Set up MSBuild
+        uses: microsoft/setup-msbuild@v1.0.2
+
+      - name: Install dependencies
         run: |
-          Invoke-WebRequest -Uri "https://github.com/premake/premake-core/releases/download/v5.0.0-beta4/premake-5.0.0-beta4-windows.zip" -OutFile premake.zip
-          Expand-Archive premake.zip -DestinationPath .
-          echo "$(pwd)\premake5.exe" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          choco install premake
 
       - name: Generate project files with Premake
         run: premake5 vs2022
