--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+            submodules: recursive
 
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1.0.2
