--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,6 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    env:
-      BUILD_TYPE: Debug
-      PLATFORM: windows
-      ARCHITECTURE: x86-64
 
     steps:
       - name: Checkout repository
@@ -39,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: StarStudio-Windows
-          path: "bin/$BUILD_TYPE-$PLATFORM-$ARCHITECTURE/Sandbox/Sandbox.exe"
+          path: "bin/Debug-windows-x86_64/Sandbox/Sandbox.exe"
