--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "StarStudio/vendor/spdlog"]
-	path = StarStudio/vendor/spdlog
+[submodule "StarEngine/vendor/spdlog"]
+	path = StarEngine/vendor/spdlog
 	url = https://github.com/gabime/spdlog/
-[submodule "StarStudio/vendor/GLFW"]
-	path = StarStudio/vendor/GLFW
+[submodule "StarEngine/vendor/GLFW"]
+	path = StarEngine/vendor/GLFW
 	url = https://github.com/TheCherno/glfw/
-[submodule "StarStudio/vendor/imgui"]
-	path = StarStudio/vendor/imgui
+[submodule "StarEngine/vendor/imgui"]
+	path = StarEngine/vendor/imgui
 	url = https://github.com/starbounded-dev/imgui
-[submodule "StarStudio/vendor/glm"]
-	path = StarStudio/vendor/glm
+[submodule "StarEngine/vendor/glm"]
+	path = StarEngine/vendor/glm
 	url = https://github.com/g-truc/glm
