--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "StarEngine/vendor/spdlog"]
 	path = StarEngine/vendor/spdlog
-	url = https://github.com/gabime/spdlog/
+	url = https://github.com/gabime/spdlog
+[submodule "StarEngine/vendor/glfw"]
+	path = StarEngine/vendor/glfw
+	url = https://github.com/TheCherno/glfw
+[submodule "StarEngine/vendor/imgui"]
+	path = StarEngine/vendor/imgui
+	url = https://github.com/starbounded-dev/imgui
+[submodule "StarEngine/vendor/glm"]
+	path = StarEngine/vendor/glm
+	url = https://github.com/g-truc/glm
