--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/gabime/spdlog/
 [submodule "StarEngine/vendor/glfw"]
 	path = StarEngine/vendor/glfw
-	url = https://github.com/TheCherno/glfw/
+	url = https://github.com/TheCherno/glfw
 [submodule "StarEngine/vendor/imgui"]
 	path = StarEngine/vendor/imgui
 	url = https://github.com/starbounded-dev/imgui/
