--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "StarEngine/vendor/spdlog"]
 	path = StarEngine/vendor/spdlog
-	url = https://github.com/gabime/spdlog/
-[submodule "StarEngine/vendor/glfw"]
-	path = StarEngine/vendor/glfw
-	url = https://github.com/TheCherno/glfw
+	url = https://github.com/gabime/spdlog.git
+	branch = v1.x
+[submodule "StarEngine/vendor/GLFW"]
+	path = StarEngine/vendor/GLFW
+	url = https://github.com/TheCherno/glfw.git
+	branch = master
 [submodule "StarEngine/vendor/imgui"]
 	path = StarEngine/vendor/imgui
-	url = https://github.com/starbounded-dev/imgui/
+	url = https://github.com/starbounded-dev/imgui.git
+	branch = docking
 [submodule "StarEngine/vendor/glm"]
 	path = StarEngine/vendor/glm
-	url = https://github.com/g-truc/glm/
+	url = https://github.com/g-truc/glm.git
+	branch = master
