--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,16 @@
 [submodule "StarEngine/vendor/spdlog"]
 	path = StarEngine/vendor/spdlog
-	url = https://github.com/gabime/spdlog.git
+	url = https://github.com/gabime/spdlog
 	branch = v1.x
 [submodule "StarEngine/vendor/GLFW"]
 	path = StarEngine/vendor/GLFW
-	url = https://github.com/TheCherno/glfw.git
+	url = https://github.com/TheCherno/glfw
 	branch = master
 [submodule "StarEngine/vendor/imgui"]
 	path = StarEngine/vendor/imgui
-	url = https://github.com/starbounded-dev/imgui.git
+	url = https://github.com/starbounded-dev/imgui
 	branch = docking
 [submodule "StarEngine/vendor/glm"]
 	path = StarEngine/vendor/glm
-	url = https://github.com/g-truc/glm.git
+	url = https://github.com/g-truc/glm
 	branch = master
