--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,13 @@
 [submodule "StarEngine/vendor/GLFW"]
 	path = StarEngine/vendor/GLFW
 	url = https://github.com/starbounded-dev/glfw
-	branch = master
 [submodule "StarEngine/vendor/spdlog"]
 	path = StarEngine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
 [submodule "StarEngine/vendor/imgui"]
 	path = StarEngine/vendor/imgui
 	url = https://github.com/starbounded-dev/imgui
-	branch = 6d276345
+	branch = docking
 [submodule "StarEngine/vendor/glm"]
 	path = StarEngine/vendor/glm
 	url = https://github.com/g-truc/glm
-	branch = master
