--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
             submodules: recursive
+            fetch-depth: = 0
 
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1.0.2
