Revert "seeing if this works"
This reverts commit 0de73ebaaf79964202b0e53d334afdf9efdc779b.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: StarEngine-Windows
-          path: |
-            bin/Debug-windows-x86_64/Sandbox/Sandbox.exe
-            bin/Debug-windows-x86_64/Sandbox/assets/
-          
+          path: "bin/Debug-windows-x86_64/Sandbox/Sandbox.exe"
