--- a/.gitmodules
+++ b/.gitmodules
@@ -1,13 +1,13 @@
 [submodule "StarEngine/vendor/GLFW"]
 	path = StarEngine/vendor/GLFW
-	url = https://github.com/starbounded-dev/glfw
+	url = ../../starbounded-dev/glfw.git
 [submodule "StarEngine/vendor/spdlog"]
 	path = StarEngine/vendor/spdlog
-	url = https://github.com/gabime/spdlog
+	url =  ../../gabime/spdlog.git
 [submodule "StarEngine/vendor/imgui"]
 	path = StarEngine/vendor/imgui
-	url = https://github.com/starbounded-dev/imgui
+	url = ../../starbounded-dev/imgui.git
 	branch = docking
 [submodule "StarEngine/vendor/glm"]
 	path = StarEngine/vendor/glm
-	url = https://github.com/g-truc/glm
+	url = ../../g-truc/glm.git
