--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: StarEngine-Windows
-          path: "bin/Debug-windows-x86_64/Sandbox/Sandbox.exe"
+          path: "bin/Debug-windows-x86_64/**/**.exe"
