--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Binaries
 **/bin/
-!vendor/premake/bin/
 bin-int/
 
 # StarEngine files
@@ -13,3 +12,11 @@ bin-int/
 **.vcxproj
 **.vcxproj.filters
 **.vcxproj.user
+
+# Directories
+StarEngine/vendor/VulkanSDK
+StarEditor/assets/cache
+scripts/__pycache__
+
+StarEngine/vendor/VulkanSDK/VulkanSDK-1.2.170.0-Installer.exe
+vendor/premake/bin/
