--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,12 +47,12 @@ jobs:
       - name: Fetch Vulkan SDK version spec
         shell: bash
         run: |
-          curl -o vulkan-sdk-config.json https://vulkan.lunarg.com/sdk/config/1.4.304.0/windows/config.json
+          curl -o config.json https://vulkan.lunarg.com/sdk/config/1.4.304.0/windows/config.json
       
       - name: Configure Vulkan SDK using the downloaded spec
         uses: humbletim/setup-vulkan-sdk@v1.2.1
         with:
-          vulkan-config-file: vulkan-sdk-config.json
+          vulkan-config-file: config
           vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Cross, SPIRV-Tools, SPIRV-Headers
           vulkan-use-cache: true
 
