--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Configure Vulkan SDK using the downloaded spec
         uses: humbletim/setup-vulkan-sdk@v1.2.1
         with:
-          vulkan-config-file: config
+          vulkan-config-file: config.json
           vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Cross, SPIRV-Tools, SPIRV-Headers
           vulkan-use-cache: true
 
