--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,17 +44,11 @@ jobs:
         with:
           version: "5.0.0-beta4"
 
-      - name: Fetch Vulkan SDK version spec
-        shell: bash
-        run: |
-          curl -o config.json https://vulkan.lunarg.com/sdk/config/1.4.304.0/windows/config.json
-      
-      - name: Configure Vulkan SDK using the downloaded spec
-        uses: humbletim/setup-vulkan-sdk@v1.2.1
+      - name: Install Vulkan SDK
+        uses: humbletim/install-vulkan-sdk@v1.2
         with:
-          vulkan-config-file: config.json
-          vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Cross, SPIRV-Tools, SPIRV-Headers
-          vulkan-use-cache: true
+          version: 1.4.304.0
+          cache: true
 
       - name: Generate project files with Premake
         run: premake5 vs2022
