--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: StarEngine-Windows
-          path: "bin/Debug-windows-x86_64/**/**.exe"
+          path: |
+            bin/Debug-windows-x86_64/**/**.exe
+            StarEditor/assets
