--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,12 @@ jobs:
         run: premake5 vs2022
 
       - name: Build project with MSBuild
-        run: MSBuild /m /p:Configuration=Debug StarEngine.sln
+        run: MSBuild /m /p:Configuration=Dist StarEngine.sln
 
       - name: Upload executable
         uses: actions/upload-artifact@v4
         with:
           name: StarEngine-Windows
           path: |
-            bin/Debug-windows-x86_64/**/**.exe
+            bin/Dist-windows-x86_64/**/**.exe
             StarEditor/assets
