--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,13 @@ jobs:
           git fetch origin ceb728371d88def1b26a03d8e15cba42c9509d4f
           git checkout ceb728371d88def1b26a03d8e15cba42c9509d4f
 
+      - name: Prepare Vulkan SDK
+        uses: humbletim/setup-vulkan-sdk@v1.2.1
+        with:
+          vulkan-query-version: 1.3.204.1
+          vulkan-components: Vulkan-Headers, Vulkan-Loader, SPIRV-Cross, SPIRV-Tools, SPIRV-Reflect, SPIRV-Headers, Shaderc
+          vulkan-use-cache: true
+
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1.0.2
 
