--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           # You can set the Vulkan SDK version to download.
           # Defaults to latest version, if version not set.
           vulkan_version: 1.3.296.0
-          optional_components: com.lunarg.vulkan.vma
+          optional_components: com.lunarg.vulkan.vma, com.lunarg.vulkan.debug, com.lunarg.vulkan.glm
           install_runtime: true
           cache: true
           stripdown: true
@@ -70,4 +70,4 @@ jobs:
           name: StarEngine-Windows
           path: |
             bin/Dist-windows-x86_64/**/**.exe
-            StarEditor/assets
+            bin/Dist-windows-x86_64/**/assets
