adding the imgui.ini
- to make it look good instead of one bagillion pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,3 +71,4 @@ jobs:
           path: |
             bin/Dist-windows-x86_64/**/**.exe
             bin/Dist-windows-x86_64/**/assets
+            bin/Dist-windows-x86_64/**/imgui.ini
