--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,20 @@ jobs:
           git fetch origin ceb728371d88def1b26a03d8e15cba42c9509d4f
           git checkout ceb728371d88def1b26a03d8e15cba42c9509d4f
 
+      - name: Install Vulkan SDK
+        uses: jakoch/install-vulkan-sdk-action@v1.2.0
+        with:
+          # You can set the Vulkan SDK version to download.
+          # Defaults to latest version, if version not set.
+          vulkan_version: 1.3.296.0
+          optional_components: com.lunarg.vulkan.vma, com.lunarg.vulkan.debug, com.lunarg.vulkan.glm
+          install_runtime: true
+          cache: true
+          stripdown: true
+          
+          install_swiftshader: false
+          install_lavapipe: false
+
       - name: Set up MSBuild
         uses: microsoft/setup-msbuild@v1.0.2
 
@@ -48,12 +62,14 @@ jobs:
         run: premake5 vs2022
 
       - name: Build project with MSBuild
-        run: MSBuild /m /p:Configuration=Debug StarEngine.sln
+        run: MSBuild /m /p:Configuration=Dist StarEngine.sln
 
       - name: Upload executable
         uses: actions/upload-artifact@v4
         with:
           name: StarEngine-Windows
           path: |
-            bin/Debug-windows-x86_64/**/**.exe
-            StarEditor/assets
+            bin/Dist-windows-x86_64/StarEditor/StarEditor.exe
+            bin/Dist-windows-x86_64/StarEditor/assets
+            bin/Dist-windows-x86_64/StarEditor/Resources
+            bin/Dist-windows-x86_64/StarEditor/imgui.ini
