making sure to use the good branches

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
+[submodule "StarEngine/vendor/spdlog"]
+	path = StarEngine/vendor/spdlog
+	url = ../../gabime/spdlog.git
+	branch = v1.x
 [submodule "StarEngine/vendor/GLFW"]
 	path = StarEngine/vendor/GLFW
 	url = ../../starbounded-dev/glfw.git
-[submodule "StarEngine/vendor/spdlog"]
-	path = StarEngine/vendor/spdlog
-	url =  ../../gabime/spdlog.git
+	branch = master
 [submodule "StarEngine/vendor/imgui"]
 	path = StarEngine/vendor/imgui
 	url = ../../starbounded-dev/imgui.git
@@ -11,12 +13,13 @@
 [submodule "StarEngine/vendor/glm"]
 	path = StarEngine/vendor/glm
 	url = ../../g-truc/glm.git
+	branch = master
 [submodule "StarEngine/vendor/yaml-cpp"]
 	path = StarEngine/vendor/yaml-cpp
-	url = ../../sheazywi/yaml-cpp.git
+	url = https://github.com/sheazywi/yaml-cpp
 [submodule "StarEngine/vendor/imguizmo"]
 	path = StarEngine/vendor/imguizmo
-	url = ../../sheazywi/imguizmo.git
+	url = https://github.com/sheazywi/imguizmo.git
 [submodule "StarEngine/vendor/Box2D"]
 	path = StarEngine/vendor/Box2D
 	url = https://github.com/sheazywi/box2d
