--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ StarEngine/vendor/VulkanSDK/VulkanSDK-1.2.170.0-Installer.exe
 vendor/premake/bin/
 StarEditor/Resources/Scripts/StarEngine-ScriptCore.dll
 StarEditor/Resources/Scripts/StarEngine-ScriptCore.pdb
+StarEditor/SandboxProject/Assets/Scripts/Binaries
