--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ vendor/premake/bin/
 StarEditor/Resources/Scripts/StarEngine-ScriptCore.dll
 StarEditor/Resources/Scripts/StarEngine-ScriptCore.pdb
 StarEditor/SandboxProject/Assets/Scripts/Binaries
+StarEngine-ScriptCore/StarEngine-ScriptCore.csproj.user
