--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ StarEditor/Resources/Scripts/StarEngine-ScriptCore.dll
 StarEditor/Resources/Scripts/StarEngine-ScriptCore.pdb
 StarEditor/SandboxProject/Assets/Scripts/Binaries
 StarEngine-ScriptCore/StarEngine-ScriptCore.csproj.user
+StarEditor/DotNet
+StarEditor/SandboxProject/Assets/Scripts/obj
+StarEngine-ScriptCore/obj
