--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
 	branch = master
 [submodule "StarEngine/vendor/imgui"]
 	path = StarEngine/vendor/imgui
-	url = ../../starbounded-dev/imgui.git
+	url = https://github.com/StudioCherno/imgui
 	branch = docking
 [submodule "StarEngine/vendor/glm"]
 	path = StarEngine/vendor/glm
@@ -26,3 +26,7 @@
 [submodule "StarEngine/vendor/msdf-atlas-gen"]
 	path = StarEngine/vendor/msdf-atlas-gen
 	url = https://github.com/sheazywi/msdf-atlas-gen
+[submodule "StarEngine/vendor/nvrhi"]
+	path = StarEngine/vendor/nvrhi
+	url = https://github.com/starbounded-dev/nvrhi
+	branch = hazel
