fixed minor type that caused errors

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ StarEditor/DotNet
 StarEditor/SandboxProject/Assets/Scripts/obj
 StarEngine-ScriptCore/obj
 StarEditor/Resources/Scripts/net8.0
+StarEngine/vendor/GLAD/bin/Debug-windows-x86_64/GLAD
