Added Tracy for debugging

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 [submodule "StarEngine/vendor/msdf-atlas-gen"]
 	path = StarEngine/vendor/msdf-atlas-gen
 	url = https://github.com/sheazywi/msdf-atlas-gen
+[submodule "StarEngine/vendor/tracy/tracy"]
+	path = StarEngine/vendor/tracy/tracy
+	url = https://github.com/wolfpld/tracy
